; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/xen/extr_enlighten_pv.c_xen_write_idt_entry.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/xen/extr_enlighten_pv.c_xen_write_idt_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }
%struct.trap_info = type { i64 }

@idt_desc = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32*)* @xen_write_idt_entry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xen_write_idt_entry(i32* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca [2 x %struct.trap_info], align 16
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32* %2, i32** %6, align 8
  %11 = load i32*, i32** %4, align 8
  %12 = load i32, i32* %5, align 4
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds i32, i32* %11, i64 %13
  %15 = ptrtoint i32* %14 to i64
  store i64 %15, i64* %7, align 8
  %16 = load i32*, i32** %4, align 8
  %17 = load i32, i32* %5, align 4
  %18 = load i32*, i32** %6, align 8
  %19 = call i32 @trace_xen_cpu_write_idt_entry(i32* %16, i32 %17, i32* %18)
  %20 = call i32 (...) @preempt_disable()
  %21 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @idt_desc, i32 0, i32 1), align 4
  %22 = call i64 @__this_cpu_read(i32 %21)
  store i64 %22, i64* %8, align 8
  %23 = load i64, i64* %8, align 8
  %24 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @idt_desc, i32 0, i32 0), align 4
  %25 = call i64 @__this_cpu_read(i32 %24)
  %26 = add i64 %23, %25
  %27 = add i64 %26, 1
  store i64 %27, i64* %9, align 8
  %28 = call i32 (...) @xen_mc_flush()
  %29 = load i32*, i32** %4, align 8
  %30 = load i32, i32* %5, align 4
  %31 = load i32*, i32** %6, align 8
  %32 = call i32 @native_write_idt_entry(i32* %29, i32 %30, i32* %31)
  %33 = load i64, i64* %7, align 8
  %34 = load i64, i64* %8, align 8
  %35 = icmp uge i64 %33, %34
  br i1 %35, label %36, label %57

36:                                               ; preds = %3
  %37 = load i64, i64* %7, align 8
  %38 = add i64 %37, 8
  %39 = load i64, i64* %9, align 8
  %40 = icmp ule i64 %38, %39
  br i1 %40, label %41, label %57

41:                                               ; preds = %36
  %42 = getelementptr inbounds [2 x %struct.trap_info], [2 x %struct.trap_info]* %10, i64 0, i64 1
  %43 = getelementptr inbounds %struct.trap_info, %struct.trap_info* %42, i32 0, i32 0
  store i64 0, i64* %43, align 8
  %44 = load i32, i32* %5, align 4
  %45 = load i32*, i32** %6, align 8
  %46 = getelementptr inbounds [2 x %struct.trap_info], [2 x %struct.trap_info]* %10, i64 0, i64 0
  %47 = call i64 @cvt_gate_to_trap(i32 %44, i32* %45, %struct.trap_info* %46)
  %48 = icmp ne i64 %47, 0
  br i1 %48, label %49, label %56

49:                                               ; preds = %41
  %50 = getelementptr inbounds [2 x %struct.trap_info], [2 x %struct.trap_info]* %10, i64 0, i64 0
  %51 = call i64 @HYPERVISOR_set_trap_table(%struct.trap_info* %50)
  %52 = icmp ne i64 %51, 0
  br i1 %52, label %53, label %55

53:                                               ; preds = %49
  %54 = call i32 (...) @BUG()
  br label %55

55:                                               ; preds = %53, %49
  br label %56

56:                                               ; preds = %55, %41
  br label %57

57:                                               ; preds = %56, %36, %3
  %58 = call i32 (...) @preempt_enable()
  ret void
}

declare dso_local i32 @trace_xen_cpu_write_idt_entry(i32*, i32, i32*) #1

declare dso_local i32 @preempt_disable(...) #1

declare dso_local i64 @__this_cpu_read(i32) #1

declare dso_local i32 @xen_mc_flush(...) #1

declare dso_local i32 @native_write_idt_entry(i32*, i32, i32*) #1

declare dso_local i64 @cvt_gate_to_trap(i32, i32*, %struct.trap_info*) #1

declare dso_local i64 @HYPERVISOR_set_trap_table(%struct.trap_info*) #1

declare dso_local i32 @BUG(...) #1

declare dso_local i32 @preempt_enable(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
